packages/typ/tests/fixtures/diagnostics/0026_core_and_int_03.ml.expected
File "0026_core_and_int_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0026_core_and_int_03 is not a valid module name.

File "0026_core_and_int_03.ml", line 2, characters 25-26:
2 | let bad : bool = true && 0
                             ^
Error: The constant 0 has type int but an expression was expected of type
         bool
